# simple_ackermann_tracking

./: .gitignore  .gitmodules  README.md  compile_commands.json
.cache/clangd/index/: Data.cpp.737D12DB940A0747.idx  Debug.cpp.6207DDA8DB26353E.idx  Settings.cpp.2738435D32BBD806.idx  Solver.cpp.B0DA0B04AA4CF9AC.idx  amd_internal.h.F0AFA420D188323E.idx  csc_utils.h.E876453286DB8581.idx  example.cpp.8CE8A1C1714291F7.idx  interrupt.h.4F1C0FB0471000D6.idx  odometry.cpp.1D491E645FE94EDA.idx  odometry.h.5C9E3C331147C4CB.idx  polish.h.430BFC9C295BCC08.idx  qdldl.h.67C9FB5CB2911CDF.idx  qdldl_interface.h.77DF70F312259F59.idx  speed_limiter.cpp.EEA5625AD085DD09.idx  speed_limiter.h.D60BD8EFAF2ABFAD.idx  steer_bot_hardware_gazebo.cpp.2424F50B061E0481.idx  steer_bot_hardware_gazebo.h.4BD5E0F832A401CD.idx  steer_drive_controller.cpp.D8FE1A0C7A3BA5A2.idx  steer_drive_controller.h.A8683363EBF2FD74.idx  steer_drive_controller_default_odom_frame_test.cpp.5C7ABBF97E420229.idx  steer_drive_controller_fail_test.cpp.DCE4BE37CD54B8DD.idx  steer_drive_controller_limits_test.cpp.78C90B501E558DC7.idx  steer_drive_controller_nan_test.cpp.19B0B9ECC4AC4472.idx  steer_drive_controller_odom_frame_test.cpp.874ECD554CDE664C.idx  steer_drive_controller_odom_tf_test.cpp.BB0E0BD0A61D4E79.idx  steer_drive_controller_test.cpp.F310495E99C81757.idx  steer_drive_controller_timeout_test.cpp.80478A130F99CD5A.idx  steerbot.cpp.F758EBD017071DC9.idx  steerbot.h.2EABE3FBDC8BED5E.idx  stepback_and_steerturn_recovery.cpp.301BC4FBB191FE14.idx  stepback_and_steerturn_recovery.h.608ADB91816A9372.idx  test_common.h.325E17431597F145.idx  trajectory_tracker.cpp.D44D071CDC50F47C.idx  trajectory_tracker.h.E7E1C3D165484F50.idx
.clangd/index/: AlignedBox.h.1A928DDDA741AE3C.idx  AngleAxis.h.9FB3DB06997CB651.idx  ArithmeticSequence.h.5780837B16DB100C.idx  Array.h.32F6AFBAD1AADDA3.idx  ArrayBase.h.2973C76A1B47A7AE.idx  ArrayCwiseBinaryOps.h.FB7AFAF3305AB552.idx  ArrayCwiseUnaryOps.h.F2931F2452AC37AD.idx  ArrayWrapper.h.72EA98BFCC95C4DA.idx  Assert.h.DF7CD74A96054726.idx  Assign.h.17C361BBEC927376.idx  AssignEvaluator.h.2C55098B44676967.idx  AssignmentFunctors.h.7273C4BCFC8968F5.idx  AudibotInterfacePlugin.cpp.81C24F4A64747F1A.idx  AudibotInterfacePlugin.h.CB28C9F8AE8F5CC7.idx  BDCSVD.h.757A9CF33D65EDAF.idx  BFloat16.h.539F131CB46AB144.idx  BandMatrix.h.677B1F3E722F4965.idx  BinaryFunctors.h.9288228523B96E30.idx  BlasUtil.h.46D2E22D5E45FED3.idx  Block.h.7D3569FCB94ED1EB.idx  BlockHouseholder.h.CF4F0351C3FA3255.idx  BlockMethods.h.2D432CADA20B66D9.idx  Cholesky.50AD535B9E0796DB.idx  ColPivHouseholderQR.h.BFDC816556284303.idx  CommaInitializer.h.230F14BEA3FDD95D.idx  CommonCwiseBinaryOps.h.EA62F46A1321170B.idx  CommonCwiseUnaryOps.h.269D90DCC4CFF556.idx  Compat.hpp.7B849D4C105C6A2A.idx  CompleteOrthogonalDecomposition.h.20621E38D5D81E1D.idx  Complex.h.54FD33A0945578DB.idx  ComplexEigenSolver.h.18BE8890CFDB22F7.idx  ComplexSchur.h.2B55E3D81CD108EE.idx  ConditionEstimator.h.F8C656FC4E3345F9.idx  ConfigureVectorization.h.B8AB76293AE6CE07.idx  ConjHelper.h.71ABBD8905A93051.idx  Constants.h.E28C5C42309AA6A5.idx  Constants.hpp.5E428945B44A74FC.idx  Core.925C689F5DFC0DE8.idx  CoreEvaluators.h.4857B18EBD60A832.idx  CoreIterators.h.4711CFD6DE95E005.idx  (+331 more)
src/four_wheel_drive/launch/: visualize_robot.launch
src/four_wheel_drive/launch/config/: robot_joint.yaml
src/four_wheel_drive/robot_model/xacro/: smartcar.urdf  smartcar.xacro  smartcar_body.xacro  smartcar_sim.xacro
src/traj_tracking/: CMakeLists.txt  package.xml
src/traj_tracking/docs/: derivation.html  derivation.md
src/traj_tracking/include/: PathGenerator.h  QuinticCurveGenerator.h  mpc_tracker.h  path_generator.h  tracking_server.h  trajectory_tracker.h
src/traj_tracking/include/proto/: tracking_data.pb.cc  tracking_data.pb.h
src/traj_tracking/launch/: traj_tracking.launch
src/traj_tracking/proto/: tracking_data.proto
src/traj_tracking/script/: visualize_tracking.ipynb
src/traj_tracking/src/: example copy.cpp  example.cpp  mpc_tracker.cpp  mpc_tracker_node.cpp  traj_tracking_gazebo.cpp  traj_tracking_osqp.cpp  traj_tracking_sim.cpp  trajectory_tracker.cpp
